--- a/backend/package.json
+++ b/backend/package.json
@@ -27,5 +27,9 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.5",
+    "@openzeppelin/contracts-upgradeable": "^4.8.1"
   }
 }
