--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,22 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@web3uikit/core": "^0.2.47",
+    "@web3uikit/icons": "^0.2.46",
+    "@web3uikit/web3": "^0.2.2",
     "autoprefixer": "^10.4.13",
+    "moralis": "^2.14.1",
+    "moralis-v1": "^1.12.0",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-carousel": "^1.0.1",
+    "react-moralis": "^1.4.2",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.2.4",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "web3uikit": "0.1.128"
   },
   "scripts": {
     "start": "react-scripts start",
