--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.9",
     "@headlessui/react": "^1.7.5",
     "@heroicons/react": "^2.0.13",
     "@material-tailwind/react": "^1.2.4",
@@ -14,6 +15,7 @@
     "@web3uikit/icons": "^0.2.46",
     "@web3uikit/web3": "^0.2.2",
     "autoprefixer": "^10.4.13",
+    "graphql": "^16.6.0",
     "moralis": "^2.14.1",
     "moralis-v1": "^1.12.0",
     "postcss": "^8.4.20",
