--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3auth/web3auth": "^2.1.3",
     "@web3uikit/core": "^0.2.47",
     "@web3uikit/icons": "^0.2.46",
     "@web3uikit/web3": "^0.2.2",
     "autoprefixer": "^10.4.13",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "magic-sdk": "^13.6.0",
     "moralis": "^2.14.1",
     "moralis-v1": "^1.12.0",
     "postcss": "^8.4.20",
